# Wumplus

./: .env.sample  README.md  bot.py  pyproject.toml
app/: config.py
app/cogs/: chatbot.py
